# ant-simulation

./: CMakeLists.txt  README.md  build-and-start.sh  build.sh  start.sh
res/shaders/: Basic.shader
src/: .prettierrc  clearShader.wgsl  index.html  main.cpp  main.js  simulationShader.wgsl  test.c  userInput.js
src/shaders/: cellShader.wgsl  simulationShader.wgsl
